# J.A.R.V.I.S

./: .gitignore  README.md  docker-compose.yml  jarvis  jarvis.sh  launcher.sh  pyproject.toml  requirements.txt  start.sh
config/: .env.example  automation.json  jarvis.json  system-prompt.txt
core/: README.md
docs/: 00-overview.md  01-installation.md  02-configuration.md  03-architecture.md  04-agent.md  05-knowledge-graph.md  06-llm-brain.md  07-runtime.md  08-cli-hud.md  09-web-ui.md  10-security.md  11-voice.md  12-tools-retrieval.md  13-scripts-ops.md  14-integrations-legacy.md  README.md
src/jarvis/: __init__.py  __main__.py  kg_eval.py
src/jarvis/agent/: __init__.py  gp_agent.py  grounding.py  math_quick.py
src/jarvis/cli/: __init__.py  hud.py  server.py
src/jarvis/core/: __init__.py  paths.py  settings.py  shell_policy.py
src/jarvis/graph/: __init__.py  work_partner.py
src/jarvis/integrations/: __init__.py  automation.py  smarthome.py
src/jarvis/legacy/: __init__.py  app_legacy.py
src/jarvis/llm/: __init__.py  brain.py
src/jarvis/rag/: __init__.py  knowledge_base.py
src/jarvis/retrieval/: __init__.py  expand.py
src/jarvis/runtime/: __init__.py  orchestrator.py  skills.py
src/jarvis/tools/: __init__.py  registry.py
src/jarvis/voice/: __init__.py  stt.py  voice_input.py  voice_output.py
ui/: hud.py  index.html  server.py
